--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         <sitemesh.version>2.4.2</sitemesh.version>
         <commons-lang.version>2.6</commons-lang.version>
 		<jsf.version>2.1.13</jsf.version>
-		<primefaces.version>3.1.1</primefaces.version>
+		<primefaces.version>5.1</primefaces.version>
 		<log4j.version>1.2.17</log4j.version>
 		<hibernate.version>4.2.15.Final</hibernate.version>
     </properties>
@@ -177,6 +177,42 @@
                                 <goals>
                                     <goal>stop</goal>
                                 </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        
+        <profile>
+            <id>copy-web-resources</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-resources-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>copy-resources-static</id>
+								<phase>process-resources</phase>
+								<goals>
+									<goal>copy-resources</goal>
+								</goals>
+                                <configuration>
+                                    <outputDirectory>target/${project.build.finalName}</outputDirectory>
+                                    <resources>
+                                        <resource>
+                                            <directory>src/main/webapp</directory>
+                                            <filtering>false</filtering>
+                                            <includes>
+		                                        <include>**/*</include>
+		                                    </includes>
+                                        </resource>
+                                    </resources>
+                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
